Fixed unit tests. By default caption is aligned center now. This is because in FF by default the browser aligned the caption center but not in Chrome, causing test to fail when no alignment is set.

--- a/Tests/test.css
+++ b/Tests/test.css
@@ -79,6 +79,10 @@ sub, sup {
     font-family: monospace;
 }
 
+caption {
+    text-align: center;
+}
+
 .Viper-button.Viper-disabled .Viper-buttonIcon {
     /*margin-top: -12px;*/
     margin-left: -8px;
